fixed scrollbars on webkit browsers ? (only chromium tested)

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,45 @@
 @use './themes.scss';
 
+.scrollable {
+    &::-webkit-scrollbar {
+        width: 15px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--md-sys-color-outline);
+        border-radius: 5em;
+        border-left: 6px solid transparent;
+        border-right: 6px solid transparent;
+        background-clip: content-box;
+    }
+    &::-webkit-scrollbar-thumb:hover {
+        border-left: 3px solid transparent;
+        border-right: 4px solid transparent;
+    }
+
+    &::-webkit-scrollbar:hover {
+        background-color: var(--md-sys-color-outline-variant);
+    }
+}
+
+.scrollable.xScroll {
+    overflow-x: auto;
+}
+
+.scrollable.yScroll {
+    overflow-y: auto;
+}
+
+::-webkit-scrollbar,
+::-webkit-scrollbar-corner {
+    background-color: rgba(0, 0, 0, 0);
+    width: 0px;
+}
+
 #root {
     width: 100vw;
     height: 100vh;
