--- a/src/components/collapsible/collapsible.module.scss
+++ b/src/components/collapsible/collapsible.module.scss
@@ -38,7 +38,9 @@
     margin-right: auto;
     margin-top: 5px;
     padding-left: 10px;
-    padding: 5px;
+    padding-top: 5px;
+    padding-bottom: 0px;
+    height: fit-content;
     max-height: 540px;
     font-size: 12pt;
     padding-left: 10px;
